# haldir

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  CONVERSATION_HISTORY.md  DAILY_PLAYBOOK.md  DAILY_REALITY_CHECK.md  Dockerfile  Dockerfile.glama  FUNDING_PATH.md  HOW_IT_WORKS.md  INTEGRATION_PLAYBOOK.md  LAUNCH_V0_3_0_X.md  LICENSE  PROSPECT_PLAYBOOK_ENTERPRISE_SECURITY.md  README.md  SECURITY.md  SELF_HOSTING.md  SOUL.md  THREAT_MODEL.md  USER_CONVERSATIONS.md  ai-plugin.json  api.py  bench_merkle.py  cli.py  dashboard.html  docker-compose.yml  haldir_admin.py  haldir_audit_tree.py  haldir_compliance.py  haldir_compliance_scheduler.py  haldir_compliance_score.py  haldir_db.py  haldir_demo_tamper.py  haldir_email.py  haldir_export.py  haldir_health.py  haldir_idempotency.py  (+27 more)
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: publish.yml  test.yml
.well-known/: agent.json  ai.txt  security.txt
.well-known/mcp/: mcp.json  server-card.json
bench/: bench_http.py  bench_primitives.py
blog/: haldir-autogen-integration.md  haldir-crewai-integration.md  haldir-langchain-integration.md  human-in-the-loop-ai-agents.md  index.md  mcp-proxy-mode-explained.md  rfc-6962-merkle-trees-for-ai-agent-audit-logs.md  secure-mcp-servers-with-haldir-proxy.md  why-ai-agents-need-governance.md
demo/: gen_quickstart.py
docs/: threat-model.md
drafts/: cold_dms.md  show_hn.md  x_content_calendar.md  x_threads.md
examples/: README.md  crewai_crew.py  human_in_the_loop.py  langchain_agent.py  proxy_mode.py  quickstart.py  vercel_ai_sdk.ts  webhook_alerts.py
github-action/: Dockerfile  README.md  action.yml  entrypoint.sh
haldir_gate/: __init__.py  approvals.py  gate.py  proxy.py
haldir_vault/: __init__.py  vault.py
haldir_watch/: __init__.py  watch.py  webhooks.py
integrations/autogen-haldir/: README.md  pyproject.toml
integrations/autogen-haldir/autogen_haldir/: __init__.py  governed_tool.py  secrets.py  session.py
integrations/autogen-haldir/examples/: basic.py
integrations/crewai-haldir/: README.md  pyproject.toml
integrations/crewai-haldir/crewai_haldir/: __init__.py  governed_tool.py  secrets.py  session.py
integrations/crewai-haldir/examples/: basic.py  two_line_crew.py
integrations/crewai-haldir/tests/: test_session.py
integrations/langchain-haldir/: README.md  pyproject.toml
integrations/langchain-haldir/examples/: basic_agent.py  two_line_agent.py
integrations/langchain-haldir/langchain_haldir/: __init__.py  callback.py  pricing.py  secrets.py  session.py  tool.py
integrations/langchain-haldir/tests/: test_callback.py  test_session.py
integrations/llamaindex-haldir/: README.md  pyproject.toml
integrations/llamaindex-haldir/examples/: basic.py  two_line_agent.py
integrations/llamaindex-haldir/llamaindex_haldir/: __init__.py  governed_tool.py  session.py
integrations/llamaindex-haldir/tests/: test_session.py
integrations/vercel-ai-haldir/: README.md  package.json
integrations/vercel-ai-haldir/examples/: basic.ts
integrations/vercel-ai-haldir/src/: index.ts
landing/: Dockerfile  demo.html  index.html
migrations/: 001_initial_schema.sql  002_webhook_deliveries.sql  004_compliance_schedules.sql  006_sth_log.sql  007_sth_mirror_receipts.sql  README.md
scripts/: gen_sbom.py
sdk/: __init__.py  client.py
sdk-js/: README.md  index.d.ts  index.js  package.json  test.js
tests/: conftest.py  test_admin.py  test_admin_html.py  test_agent_discovery.py  test_api.py  test_audit_export.py  test_audit_tree.py  test_cli_commands.py  test_compliance.py  test_compliance_html.py  test_compliance_scheduler.py  test_compliance_score.py  test_db.py  test_demo_tamper.py  test_dockerfile.py  test_email_delivery.py  test_gate.py  test_haldir.py  test_health.py  test_idempotency.py  test_keys_admin.py  test_logging.py  test_mcp_server.py  test_merkle_ed25519.py  test_merkle_properties.py  test_metrics.py  test_middleware.py  test_migrate.py  test_openapi.py  test_persistent.py  test_proxy.py  test_rate_limit_headers.py  test_rekor_verify.py  test_scopes.py  test_sdk.py  test_status.py  test_sth_log.py  test_tracing.py  test_transparency_mirror.py  test_validation.py  (+8 more)
