[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "haldir"
version = "0.1.0"
description = "The guardian layer for AI agents — identity, secrets, audit via MCP"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Sterling", email = "sterling@getexposureguard.com"}]
keywords = ["mcp", "ai-agents", "security", "identity", "secrets", "audit", "model-context-protocol"]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "cryptography>=42.0.0",
]

[project.scripts]
haldir-mcp = "haldir.mcp_server:main"

[project.urls]
Homepage = "https://github.com/haldir-ai/haldir"
Documentation = "https://haldir.dev/docs"

[tool.hatch.build.targets.wheel]
packages = ["haldir_gate", "haldir_vault", "haldir_watch", "sdk"]
