[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "haldir"
version = "0.2.2"
description = "The guardian layer for AI agents — scoped sessions, AES-256-GCM secrets, hash-chained audit, policy proxy."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Sterling Ivey", email = "sterling@haldir.xyz"}]
maintainers = [{name = "Sterling Ivey", email = "sterling@haldir.xyz"}]
keywords = [
    "ai-agents", "agent-governance", "agent-security",
    "mcp", "model-context-protocol",
    "langchain", "crewai", "vercel-ai-sdk",
    "identity", "secrets-management", "audit", "audit-log",
    "hash-chain", "tamper-evident", "compliance",
    "aes-256-gcm", "proxy", "policy-enforcement", "spend-control",
    "human-in-the-loop", "governance",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Security",
    "Topic :: Security :: Cryptography",
    "Topic :: System :: Logging",
    "Topic :: System :: Systems Administration :: Authentication/Directory",
    "Typing :: Typed",
]
dependencies = [
    "mcp>=1.27.0",
    "httpx>=0.28.1",
    "pydantic>=2.13.2",
    "cryptography>=46.0.7",
]

[project.optional-dependencies]
dev = ["pytest>=9.0.3", "pytest-asyncio>=1.3.0"]

[project.scripts]
haldir = "cli:main"
haldir-mcp = "mcp_server:main"

[project.urls]
Homepage = "https://haldir.xyz"
Documentation = "https://haldir.xyz/docs"
Repository = "https://github.com/ExposureGuard/haldir"
Issues = "https://github.com/ExposureGuard/haldir/issues"
Discussions = "https://github.com/ExposureGuard/haldir/discussions"
Changelog = "https://github.com/ExposureGuard/haldir/blob/main/CHANGELOG.md"
Wiki = "https://github.com/ExposureGuard/haldir/wiki"
"Self-Hosting" = "https://github.com/ExposureGuard/haldir/blob/main/SELF_HOSTING.md"
Security = "https://github.com/ExposureGuard/haldir/blob/main/SECURITY.md"

[tool.hatch.build.targets.wheel]
packages = ["haldir_gate", "haldir_vault", "haldir_watch", "sdk"]
include = ["mcp_server.py", "haldir_db.py", "cli.py"]

[tool.hatch.build.targets.sdist]
include = [
    "haldir_gate/**",
    "haldir_vault/**",
    "haldir_watch/**",
    "sdk/**",
    "mcp_server.py",
    "haldir_db.py",
    "cli.py",
    "README.md",
    "pyproject.toml",
]
